# VEDAMAX-sentimedic

./: .gitignore  Dockerfile  PROJECT_STRUCTURE.md  README.md  docker-compose.yml  env.example  pyproject.toml  requirements-dev.txt  requirements.txt  test_phase4.py  test_phase5.py
.github/workflows/: ci.yml
docker/: Dockerfile.api  Dockerfile.worker
docs/: LLM_PROJECT_UNDERSTANDING.xml  PHASES_OF_THE_PROJECT.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css
frontend/src/api/: getAuthHeaders.ts  ingestApi.ts  queryApi.ts  uploadApi.ts
frontend/src/components/: AppShell.tsx  AttachmentBar.tsx  ChatComposer.tsx  CitationList.tsx  EmptyState.tsx  MessageBubble.tsx  MessageList.tsx  (+2 more)
scripts/: evaluation.py  generate_test_fixtures.py  ingest_documents.py  ingest_medlineplus.py  run_eval_cases.py  run_evaluation.py  run_hallucination_check.py  run_retrieval_eval.py  seed_kb.py  setup_environment.sh  test_end_to_end.py  test_triage.py
src/: __init__.py
src/agentic/: __init__.py
src/analysis/: __init__.py  input_analyzer.py
src/api/: __init__.py  main.py
src/config/: constants.py  logging_config.py  settings.py
src/context/: __init__.py  context_manager.py  emotion_tracker.py  memory_manager.py  models.py  risk_escalation.py  storage.py  user_profile.py  utils.py
src/evaluation/: __init__.py
src/generation/: __init__.py  llm_client.py  post_processor.py  response_generator.py
src/ingestion/: __init__.py  batch_processor.py  chunk_metadata.py  etl_pipeline.py
src/monitoring/: __init__.py
src/retrieval/: __init__.py  hybrid_search.py  pipeline.py  reranker.py
src/safety/: __init__.py
src/utils/: file_utils.py  text_utils.py  validators.py
tests/: __init__.py  conftest.py
tests/fixtures/: test_data.json
tests/integration/: test_etl_pipeline.py  test_retrieval_pipeline.py  test_table_extractor.py
webapp/: INTERFACE_GUIDE.md  README.md  __init__.py  app.py  requirements.txt  run.sh
webapp/components/: __init__.py  chat_interface.py  file_upload.py  sidebar.py
webapp/utils/: __init__.py  config.py  styling.py
(+72 files in other folders)
